<resources>
    <string name="app_name">Submission-BAJP-1</string>

    <string name="url_poster">https://image.tmdb.org/t/p/w500%s</string>
    <string name="desc">Description</string>
    <string name="overview">Overview</string>
    <string name="title">title</string>
    <string name="tab_1">MOVIE</string>
    <string name="tab_2">TV SHOW</string>
    <string name="poster">Gambar poster</string>
    <string name="releaseDate">Release date</string>
    <string name="language">EN</string>
    <string name="rateCount">999</string>
    <string name="message_error">There is an Error</string>
    <string name="content_desc_fab_fav" translatable="false">FAB Favorite</string>
    <string name="message_add_favorite">You have successfully add favorite</string>
    <string name="message_remove_favorite">You have successfully remove favorite</string>
    <string name="content_desc_change_language">Image Favorite</string>
    <string name="title_appbar">Movie App</string>
    <string name="undo_delete">Cancel to delete?</string>
    <string name="ok">Ok</string>

</resources>