<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:fillViewport="true"
    tools:ignore="Overdraw">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/dimen_30dp">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:foregroundTintMode="add"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/content_desc_fab_fav"
                android:elevation="4dp"
                android:src="@drawable/ic_favorite_border"
                android:tint="@color/white"
                app:borderWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="250dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image_view"
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="216dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="@dimen/dimen_8dp"
                app:cardElevation="@dimen/dimen_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_detail"
                    android:layout_width="@dimen/dimen_150dp"
                    android:layout_height="@dimen/dimen_210dp"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    android:src="@color/purple_700" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/tvs_20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_image_view"
                app:layout_constraintTop_toBottomOf="@id/img_backdrop" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/releaseDate"
                android:textSize="@dimen/tvs_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cv_image_view"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/card_year_rate_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_image_view">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/dimen_16dp"
                            android:layout_height="@dimen/dimen_16dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="2.5dp"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_language_grey"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="3dp"
                            android:fontFamily="@font/poppins"
                            tools:text="EN" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="4dp"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/dimen_16dp"
                            android:layout_height="@dimen/dimen_16dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_star_yellow"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:fontFamily="@font/poppins"
                            tools:text="9.5" />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="4dp"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:paddingHorizontal="10dp"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_16dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_vote_grey"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_rate_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/poppins"
                            tools:ignore="NotSibling"
                            tools:text="@string/rateCount" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="@dimen/tvs_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_year_rate_duration" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_30dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview"
                tools:layout_editor_absoluteX="16dp"
                tools:text="@string/desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
