<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image_movie"
            android:layout_width="140dp"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/dimen_8dp"
            app:cardElevation="@dimen/dimen_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_movie"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@color/purple_700"
                tools:ignore="ContentDescription" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_image_movie"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/poppins_bold"
                android:maxLines="2"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/title" />

            <TextView
                android:id="@+id/tv_release_date"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                app:layout_constraintStart_toEndOf="@id/img_movie"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:ignore="NotSibling"
                tools:text="@string/releaseDate" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="4dp"
                    app:layout_constraintStart_toEndOf="@id/img_movie"
                    app:layout_constraintTop_toBottomOf="@id/tv_release_date"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="5dp"
                        android:paddingEnd="10dp"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dimen_16dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_language_grey"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/poppins"
                            tools:ignore="NotSibling"
                            tools:text="@string/language" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="50dp"
                    app:cardElevation="4dp"
                    tools:ignore="NotSibling">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="@dimen/dimen_16dp"
                            android:layout_height="@dimen/dimen_16dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_star_yellow"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:fontFamily="@font/poppins"
                            tools:text="9.5" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="4dp"
                tools:ignore="NotSibling">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_16dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_vote_grey"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_rate_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/poppins"
                        tools:ignore="NotSibling"
                        tools:text="@string/rateCount" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>